# Kotitonttu

./: .gitignore  CMakeLists.txt  README.md  flags.cmake
apps/: CMakeLists.txt
apps/dashboard/: CMakeLists.txt  base_ui_plane.cpp  base_ui_plane.h  main.cpp  resources.conf
apps/server/: Application.hpp  CMakeLists.txt  main.cpp
cmake/: windows-specifics.cmake
gui/: CMakeLists.txt  README.md
gui/apps/: main.cpp
gui/ext-libs/: README.md
gui/include/: Color.hpp  FullscreenApplication.hpp  WindowedApplication.hpp
gui/src/: FullscreenApplication.cpp
kotitonttu/: Application.hpp  CMakeLists.txt  macros.hpp
kotitonttu/flatbuffers/: CMakeLists.txt  CommandRequest.fbs  CommandRequest.h
kotitonttu/sensors/: PhilipsHue.cpp  PhilipsHue.hpp  Sensor.cpp  Sensor.hpp
scripts/: common_functions.sh  install-windows.ps1
scripts/install-windows/: vcpkg.ps1
scripts/intall-linux/: install_corrade.sh  install_magnum.sh  install_magnum_extras.sh  install_magnum_plugins.sh
scripts/windows/: update_flatbuffers.ps1  vcpkg.ps1
